# rsynapse

./: .project.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  shell.nix
docs/initial/: 00_workspace_foundation.md  01_locus_shell_dbus_sources.md  02_niri_dbus.md  03_locus_relations.md
install/: README.md  local.sh
install/dbus-1/services/: org.rsynapse.Engine.service.in  org.rsynapse.Locus.service.in  org.rsynapse.Niri.service.in
install/git-hooks/: post-merge
install/systemd/user/: rsynapse-notifications.service.in  rsynapse-shell.service.in
locus/: Cargo.toml  README.md
locus/src/: lib.rs  main.rs  service.rs  store.rs
niri-dbus/: Cargo.toml  README.md
niri-dbus/src/: dbus.rs  ipc.rs  lib.rs  main.rs  paths.rs  service.rs  state.rs
refactor/: gtk4-background-effect.md  install.md  launcher-rsynapse-cli.md  launcher-rsynapse-daemon.md  launcher-rsynapse-plugin-calc.md  launcher-rsynapse-plugin-commands.md  launcher-rsynapse-plugin-launcher.md  launcher-rsynapse-plugin-shell.md  launcher-rsynapse-plugin.md  launcher-rsynapse-ui.md  locus.md  niri-dbus.md  readme.md  rsynapse-shell-app.md  shell-core.md  shell-examples-battery-status.md  shell-examples-volume-status.md  shell-examples-window-tiles.md  shell-macros.md  shell-rx-macros.md
rsynapse-cli/: Cargo.toml
rsynapse-cli/src/: main.rs
rsynapse-daemon/: Cargo.toml
rsynapse-daemon/src/: main.rs
rsynapse-plugin/: Cargo.toml
rsynapse-plugin-calc/src/: lib.rs
rsynapse-plugin-commands/: Cargo.toml
rsynapse-plugin-commands/src/: lib.rs
rsynapse-plugin-launcher/: Cargo.toml
rsynapse-plugin-launcher/src/: lib.rs
rsynapse-plugin-shell/: Cargo.toml
rsynapse-plugin-shell/src/: lib.rs
rsynapse-plugin/src/: lib.rs
rsynapse-ui/: Cargo.toml
rsynapse-ui/src/: dbus.rs  main.rs  style.css
shell/: .gitignore  .project.json  AGENTS.md  AGS_REFERENCE.md  Cargo.toml  PLAN.md  PROJECT.md  README.md  SOURCE_API.md
shell/app/: Cargo.toml  build.rs
shell/app/src/: desktop_icon.rs  hints.rs  lib.rs  main.rs  request.rs  theme.rs
shell/app/src/widgets/: AGENTS.md  level_indicator.rs  material_icon.rs  mod.rs
shell/app/src/widgets/bar/: battery.rs  mod.rs  mpris.rs  niri.rs  power_profile.rs  source_errors.rs  time.rs  window_source.rs  workspaces.rs
shell/app/src/widgets/bar/audio/: mod.rs  route_popover.rs  route_row.rs  source.rs
shell/app/src/widgets/bar/bluetooth/: device_type.rs  mod.rs  model.rs  source.rs  view.rs
shell/app/src/widgets/bar/brightness/: mod.rs  test.rs
shell/app/src/widgets/bar/bzbus/: mod.rs  source.rs  test.rs  view.rs
shell/app/src/widgets/bar/bzbus/source/: protocol.rs
shell/app/src/widgets/bar/network/: mod.rs  model.rs  parse.rs
shell/app/src/widgets/bar/project_label/: mod.rs  source.rs
shell/app/src/widgets/bar/project_label/source/: agent.rs  build.rs  project.rs  test.rs  workspace_fallback.rs
shell/app/src/widgets/bar/system_stats/: mod.rs  source.rs
shell/app/src/widgets/bar/systray/: mod.rs
shell/app/src/widgets/bar/window_tile/: mod.rs  source.rs
shell/app/src/widgets/bar/window_tile/agent/: mod.rs
shell/app/src/widgets/bar/window_tile/agent/source/: actual.rs  mod.rs  test.rs
shell/app/src/widgets/notifications/: card.rs  mod.rs  model.rs  service.rs
shell/app/src/widgets/notifications/model/: test.rs
shell/app/src/widgets/osd/: mod.rs
shell/app/stylesheets/: bar.scss  common.scss  gtk-colors.scss  notifications.scss  osd.scss  rsynapse-shell.scss  surfaces.scss
shell/core/background-effect/: Cargo.toml
shell/core/background-effect/src/: effect.rs  lib.rs  region.rs  test.rs
shell/core/macros/: Cargo.toml
shell/core/macros/src/: dbus_model.rs  lib.rs  view_model.rs
shell/core/macros/src/locus_bindings/: component.rs  config.rs  expand.rs  mod.rs  test.rs  view.rs
shell/core/rx-macros/: Cargo.toml
shell/core/rx-macros/src/: lib.rs
shell/core/shell-core/: Cargo.toml
shell/core/shell-core/src/: app.rs  lib.rs  model.rs
shell/core/shell-core/src/css/: compiler.rs  error.rs  mod.rs  source.rs  stylesheet.rs  test.rs  watcher.rs
shell/core/shell-core/src/list/: box_container.rs  mod.rs
shell/core/shell-core/src/source/: dbus.rs  mod.rs  state.rs  stream.rs  support.rs
shell/core/shell-core/src/window/: config.rs  layer.rs  mod.rs  test.rs
shell/docs/reviews/: architecture-app-sharing-rerun.md  architecture-app-sharing.md  architecture-core-extraction-rerun.md  architecture-core-extraction.md  performance-app-widgets-rerun.md  performance-app-widgets.md  performance-core-runtime-rerun.md  performance-core-runtime.md
shell/examples/battery-status/: Cargo.toml
shell/examples/battery-status/src/: main.rs
shell/examples/volume-status/: Cargo.toml
shell/examples/volume-status/src/: main.rs
shell/examples/window-tiles/: Cargo.toml
shell/examples/window-tiles/src/: main.rs  model.rs  niri.rs  row.rs  window.rs
shell/launcher/: .project.json  CLAUDE.md  README.md
shell/launcher/rsynapse-cli/: Cargo.toml  README.md
shell/launcher/rsynapse-cli/src/: main.rs
shell/launcher/rsynapse-daemon/src/: main.rs
shell/launcher/rsynapse-plugin-calc/: Cargo.toml
shell/launcher/rsynapse-plugin-calc/src/: lib.rs
shell/launcher/rsynapse-plugin-commands/src/: lib.rs
shell/launcher/rsynapse-plugin-launcher/: Cargo.toml
shell/launcher/rsynapse-plugin-launcher/src/: lib.rs
shell/launcher/rsynapse-plugin/src/: lib.rs
shell/launcher/rsynapse-ui/: Cargo.toml
shell/launcher/rsynapse-ui/src/: dbus.rs
