[package]
name = "locus"
version = "0.1.0"
edition = "2024"
description = "D-Bus relation store for desktop object associations"
publish = false

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zvariant = "4.2.0"

[dev-dependencies]
tempfile = "3.27.0"
