[package]
name = "rsynapse-shell"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rsynapse-notifications"
path = "src/bin/rsynapse-notifications.rs"

[dependencies]
async-channel = "2.5.0"
futures-util = "0.3.32"
adw = { package = "libadwaita", version = "0.9.1" }
gtk = { package = "gtk4", version = "=0.11.3" }
gtk4-background-effect.workspace = true
notify = "6.1.1"
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }
relm4 = { version = "0.11.0", features = ["libadwaita"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-core.workspace = true
shell-macros.workspace = true
shell-rx-macros.workspace = true
tokio = { version = "1.52.3", features = ["fs", "io-util", "process", "time"] }
tracing.workspace = true
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zvariant = "4.2.0"

[build-dependencies]
pkg-config = "0.3.32"
