[package]
name = "rsynapse-battery-status-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "rsynapse-battery-status"
path = "src/main.rs"

[dependencies]
gtk.workspace = true
relm4.workspace = true
shell-core.workspace = true
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
